# novaledger

./: CMakeLists.txt  Makefile  design_choices  run.sh  steps
src/: block.h  constants.h  crypto.cpp  crypto.h  main.cpp  transaction.cpp  transaction.h  wallet.cpp  wallet.h
src/cmd/: all.h  genesis.cpp  genesis.h
src/core/: all.h  block.cpp  block.h  blockchain.cpp  blockchain.h  pow.cpp  pow.h  transaction.cpp  transaction.h  utxo.cpp  utxo.h
src/crypto/: all.h  block.cpp  block.h  crypto.cpp  crypto.h  key.cpp  key.h  merkle.cpp  merkle.h  transaction.cpp  transaction.h  wallet.cpp  wallet.h
src/net/: all.h  client.cpp  client.h  protocol.h  server.cpp  server.h
src/types/: all.h  block.h  crypto.h  net.h  node.h  transaction.h  utxo.h  wallet.h
src/util/: all.h  conversion.cpp  conversion.h  conversions.cpp  print.cpp  print.h
src/wallet/: all.h  wallet.cpp  wallet.h
